fixed wrong sized mute button in ios safari

--- a/styles.css
+++ b/styles.css
@@ -150,11 +150,9 @@ table {
   gap: 32px;
   padding-bottom: 80px; /* reserve space for footer */
 }
-.playback-button {
-  background: var(--highlight);
+.playback-button, #btn-mute {
   color: var(--background);
   border: none;
-  border-radius: 4px;
   cursor: pointer;
   user-select: none;
   white-space: nowrap;
@@ -165,10 +163,14 @@ table {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
-  font-size: 1rem;
-  transition: background-color var(--transition-default);
   -webkit-tap-highlight-color: transparent;
+}
+#btn-mute {
+  background: none;
+}
+.playback-button {
+  background: var(--highlight);
+  border-radius: 4px;
 }
 .playback-button:hover,
 #volume-slider:hover {
@@ -420,19 +422,6 @@ canvas.track-waveform-canvas {
   margin-left: 20px;
   display: flex;
   align-items: center;
-}
-
-#btn-mute {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  width: var(--btn-size);
-  height: var(--btn-size);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: color var(--transition-default);
-  -webkit-tap-highlight-color: transparent;
 }
 
 #volume-percent {
